--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.iText-5.0.5.jar}
+    ${file.reference.iText-5.0.5.jar}:\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
